[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menus/song_list/song_list.gd" type="Script" id=1]

[node name="song_list" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 920.0
margin_top = 500.0
margin_right = 1220.0
margin_bottom = 575.0
text = "Play Song"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 920.0
margin_top = 600.0
margin_right = 1220.0
margin_bottom = 675.0
text = "Back To Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
